// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`快照测试 主操作区有IconButton 1`] = `
<div
  className="sc-AxjAm kbWQud"
>
  <button
    className="sc-AxirZ ctNRvI sinoui-base-button sc-AxiKw jjBwQb sinoui-icon-button"
    color="textSecondary"
    role="button"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="sc-AxhCb klcZHD sinoui-svg-icon"
      data-testid="BookmarkBorderIcon"
      focusable="false"
      role="presentation"
      size={24}
      viewBox="0 0 24 24"
    >
      <path
        d="M17 3H7c-1.1 0-1.99.9-1.99 2L5 21l7-3 7 3V5c0-1.1-.9-2-2-2zm0 15l-5-2.18L7 18V5h10v13z"
      />
    </svg>
  </button>
</div>
`;

exports[`快照测试 主操作区有图标 1`] = `
<div
  className="sc-AxjAm kbWQud"
>
  <svg
    aria-hidden="true"
    className="sc-AxhCb klcZHD sinoui-svg-icon"
    data-testid="BookmarkBorderIcon"
    focusable="false"
    role="presentation"
    size={24}
    viewBox="0 0 24 24"
  >
    <path
      d="M17 3H7c-1.1 0-1.99.9-1.99 2L5 21l7-3 7 3V5c0-1.1-.9-2-2-2zm0 15l-5-2.18L7 18V5h10v13z"
    />
  </svg>
</div>
`;

exports[`快照测试 主操作区有头像 1`] = `
<div
  className="sc-AxjAm kbWQud"
>
  <div
    className="sc-AxhUy XEnYI sinoui-avatar"
    color="actionDisabled"
  >
    M
  </div>
</div>
`;
